<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EBEBEB"
    tools:context="com.waterworld.watch.mine.activity.ModifyPasswordActivity">

    <include layout="@layout/common_header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_old_password"
        android:layout_marginTop="28dp"
        android:layout_marginStart="14dp"
        android:textSize="13sp"
        android:textColor="#979797"/>
    <EditText
        android:id="@+id/ed_oldPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="14dp"
        android:background="#FFFFFF"
        android:hint="@string/case_matters"
        android:textSize="14sp"
        android:textColor="#979797"
        android:textCursorDrawable="@drawable/edit_cursor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_new_password"
        android:layout_marginTop="28dp"
        android:layout_marginStart="14dp"
        android:textSize="13sp"
        android:textColor="#979797"/>
    <EditText
        android:id="@+id/ed_newPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="14dp"
        android:background="#FFFFFF"
        android:hint="@string/at_least_two_combinations"
        android:textSize="14sp"
        android:textColor="#979797"
        android:textCursorDrawable="@drawable/edit_cursor"/>
</LinearLayout>
