<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
            android:id="@+id/header"
            layout="@layout/common_header"/>

    <TextView
            android:id="@+id/tv_new_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="28dp"
            android:text="@string/mine_modify_phone"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"/>

    <EditText
            android:id="@+id/et_new_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/white_1"
            android:hint="@string/mine_modify_phone_hint"
            android:inputType="phone"
            android:paddingStart="14dp"
            android:paddingTop="12dp"
            android:paddingEnd="14dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/gray_1"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_phone"/>

    <TextView
            android:id="@+id/tv_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="28dp"
            android:text="@string/mine_modify_authCode"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_new_phoneNumber"/>

    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_verification">

        <EditText
                android:id="@+id/et_authCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/white_1"
                android:hint="@string/mine_modify_authCode_hint"
                android:paddingStart="14dp"
                android:paddingTop="12dp"
                android:paddingEnd="14dp"
                android:paddingBottom="12dp"
                android:textColor="@color/black_1"
                android:textColorHint="@color/gray_1"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textSize="14sp"/>

        <RelativeLayout
                android:id="@+id/rl_getAuthCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:background="@color/white_1">

            <TextView
                    android:id="@+id/tv_authCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/get_verification_code"
                    android:textColor="@color/yellow_1"
                    android:textSize="14sp"
                    android:visibility="visible"/>

            <ProgressBar
                    android:id="@+id/pb_authCode"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/yellow_1"
                    android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="28dp"
            android:text="@string/mine_modify_password"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"/>

    <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/white_1"
            android:hint="@string/mine_modify_password_hint"
            android:paddingStart="14dp"
            android:paddingTop="12dp"
            android:paddingEnd="14dp"
            android:paddingBottom="12dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/gray_1"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"/>
</android.support.constraint.ConstraintLayout>