<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#f33213">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_delete"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#ffffff" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_item_electronic_fence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_fence_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/black_1"
                android:text="@string/electronic_fence_name"/>
            <TextView
                android:id="@+id/tv_remind_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textSize="11sp"
                android:textColor="@color/gray_6"
                android:text="@string/remind_way"/>
            <TextView
                android:id="@+id/tv_safety_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="2dp"
                android:textSize="11sp"
                android:textColor="@color/gray_6"
                android:text="@string/safety_range"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/gray_5"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background = "@drawable/selector_check"
            android:button = "@null"
            android:checked = "true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
</FrameLayout>