<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.29">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textSize="27sp"
            android:textColor="#000000"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp">
            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_user"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                />
            <EditText
                android:id="@+id/et_login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_user"
                android:hint="@string/phone_number"
                android:textCursorDrawable = "@drawable/edit_cursor"
                android:layout_marginStart="16dp"
                android:background="#FFFFFF"
                android:textSize="14sp"
                android:textColor="#979797"
                android:maxLines="1"
                android:maxLength="11"
                />
            <ImageView
                android:id="@+id/iv_login_clear_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/login_clear_user"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="9dp"
            android:background="#E3E3E3"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp">
            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_password"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                />
            <EditText
                android:id="@+id/et_login_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_password"
                android:hint="@string/input_password"
                android:textCursorDrawable = "@drawable/edit_cursor"
                android:layout_marginStart="16dp"
                android:background="#FFFFFF"
                android:textSize="14sp"
                android:textColor="#979797"
                android:maxLines="1"
                android:maxLength="11"
                />
            <ImageView
                android:id="@+id/iv_login_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/login_hide_password"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#E3E3E3"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginTop="19dp">
            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/forget_password"
                android:textColor="#FACB10"/>
            <TextView
                android:id="@+id/tv_verification_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/verification_login"
                android:textColor="#FACB10"/>
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_button"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="17sp"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_button"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="17sp"/>
    </LinearLayout>

</LinearLayout>
