<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:CircleImageView="http://schemas.android.com/apk/res-auto"
	android:background="#FFFFFF"
	android:orientation="vertical"
	tools:context="com.waterworld.watch.mine.activity.MyInformationActivity">
	<include layout = "@layout/common_header" />
	
	<RelativeLayout
		android:id = "@+id/rl_avatar"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content">
		
		<TextView
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_marginStart = "18dp"
			android:layout_marginTop = "18dp"
			android:layout_marginBottom = "18dp"
			android:text = "@string/avatar"
			android:textColor = "@color/black_1"
			android:textSize = "16sp" />

		<com.waterworld.watch.common.customview.CircleImageView
			android:id="@+id/iv_avatar"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_centerVertical = "true"
			android:layout_marginEnd = "21dp"
			android:layout_toStartOf = "@+id/iv_avatar_enter"
			android:background="@drawable/sys_parent_01" />
		
		<ImageView
			android:id = "@+id/iv_avatar_enter"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_alignParentEnd = "true"
			android:layout_centerVertical = "true"
			android:layout_marginEnd = "18dp"
			android:src = "@drawable/ic_arrow_right" />
	</RelativeLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#EFEFEF"/>

	<RelativeLayout
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content"
		android:focusable="true"
		android:focusableInTouchMode="true">
		
		<TextView
			android:id="@+id/tv_nicename"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_marginStart = "18dp"
			android:layout_marginTop = "18dp"
			android:layout_marginBottom = "18dp"
			android:text = "@string/nickname"
			android:textColor = "#000000"
			android:textSize = "16sp" />
		
		<EditText
			android:id="@+id/et_nickname"
			android:layout_width = "match_parent"
			android:layout_height = "wrap_content"
			android:layout_centerVertical = "true"
			android:layout_toEndOf="@+id/tv_nicename"
			android:gravity="right"
			android:layout_marginEnd = "21dp"
			android:layout_alignParentEnd="true"
			android:textCursorDrawable = "@drawable/edit_cursor"
			android:background="#FFFFFF"
			android:textSize="14sp"
			android:textColor="@color/gray_3"
			android:hint = "@string/nickname" />

	</RelativeLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#EFEFEF"/>

	<RelativeLayout
		android:id = "@+id/rl_relationship"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content">
		
		<TextView
			android:id="@+id/tv_relationship"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_marginStart = "18dp"
			android:layout_marginTop = "18dp"
			android:layout_marginBottom = "18dp"
			android:text = "@string/relationship_with_baby"
			android:textColor = "#000000"
			android:textSize = "16sp" />

		<EditText
			android:id="@+id/et_relationship"
			android:layout_width = "match_parent"
			android:layout_height = "wrap_content"
			android:layout_centerVertical = "true"
			android:layout_toEndOf="@+id/tv_relationship"
			android:gravity="right"
			android:layout_marginEnd = "21dp"
			android:layout_alignParentEnd="true"
			android:textCursorDrawable = "@drawable/edit_cursor"
			android:background="#FFFFFF"
			android:textSize="14sp"
			android:textColor="@color/gray_3"
			android:hint = "@string/relationship_with_baby" />
	</RelativeLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#EFEFEF"/>

	<RelativeLayout
		android:id = "@+id/rl_modify_account"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content">
		
		<TextView
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_marginStart = "18dp"
			android:layout_marginTop = "18dp"
			android:layout_marginBottom = "18dp"
			android:text = "@string/modify_account"
			android:textColor = "#000000"
			android:textSize = "16sp" />
		
		<TextView
			android:id="@+id/tv_account"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_centerVertical = "true"
			android:layout_marginEnd = "21dp"
			android:layout_toStartOf = "@+id/iv_modify_account_enter"
			android:textColor="@color/gray_3"
			android:textSize="14sp"
			android:text = "@string/modify_account" />
		
		<ImageView
			android:id = "@+id/iv_modify_account_enter"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_alignParentEnd = "true"
			android:layout_centerVertical = "true"
			android:layout_marginEnd = "18dp"
			android:src = "@drawable/ic_arrow_right" />
	</RelativeLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#EFEFEF"/>

	<RelativeLayout
		android:id = "@+id/rl_modify_password"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content">
		
		<TextView
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_marginStart = "18dp"
			android:layout_marginTop = "18dp"
			android:layout_marginBottom = "18dp"
			android:text = "@string/modify_password"
			android:textColor = "#000000"
			android:textSize = "16sp" />
		
		<ImageView
			android:id = "@+id/iv_modify_password_enter"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_alignParentEnd = "true"
			android:layout_centerVertical = "true"
			android:layout_marginEnd = "18dp"
			android:src = "@drawable/ic_arrow_right" />
	</RelativeLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#EFEFEF"/>
</LinearLayout>
